cập nhật lại tên package

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,27 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 .vscode/settings.json
+src/vn/edu/giadinh/tuan01/Lab1Bai1.java
+src/vn/edu/giadinh/tuan02/XeTestDrive.java
+src/vn/edu/giadinh/tuan02/XeTestDrive.java
+src/vn/edu/giadinh/tuan02/XeTestDrive.java
+src/vn/edu/giadinh/tuan02/XeTestDrive.java
+src/vn/edu/giadinh/tuan02/XeTestDrive.java
+src/vn/edu/giadinh/tuan02/lab2Bai1.java
+src/vn/edu/giadinh/tuan01/Lab1Bai4.java
+src/vn/edu/giadinh/tuan01/Lab1Bai3.java
+src/vn/edu/giadinh/tuan01/Lab1Bai2.java
+src/vn/edu/giadinh/tuan01/Lab1Bai1.java
+src/vn/edu/giadinh/tuan02/Lab2Bai2.java
+src/vn/edu/giadinh/tuan02/Lab2Bai3.java
+src/vn/edu/giadinh/tuan02/Lab2Bai4.java
+src/vn/edu/giadinh/tuan02/MayTinh.java
+src/vn/edu/giadinh/tuan02/MayTinhTestDrive.java
+src/vn/edu/giadinh/tuan02/NhanVien.java
+src/vn/edu/giadinh/tuan02/NhanVienTestDrive.java
+src/vn/edu/giadinh/tuan02/Sach.java
+src/vn/edu/giadinh/tuan02/SachTestDrive.java
+src/vn/edu/giadinh/tuan02/TaiKhoan.java
+src/vn/edu/giadinh/tuan02/TaiKhoanTestDrive.java
+src/vn/edu/giadinh/tuan02/Xe.java
+src/vn/edu/giadinh/tuan02/XeTestDrive.java
